--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
             </div>
             </div>
           </div>
-          <div class="button"><a href="#"><button>SIGN IN</button></a></div>
-          <div class="button"><a href="#"><button>SIGN UP</button></a></div>
-          <div class="button"><a href="#"><button>PLAY AS GUEST</button></a></div>
+          <div class="button"><a href="signin.html"><button>SIGN IN</button></a></div>
+          <div class="button"><a href="signup.html"><button>SIGN UP</button></a></div>
+          <div class="button"><a href="game.html"><button>PLAY AS GUEST</button></a></div>
         </nav>
     </main>
 </body>
