--- a/public/game1.html
+++ b/public/game1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -23,9 +23,12 @@
         </div>
     </div>
     <ul class="hud hud--hidden">
-        <li class="hud__score">Score: <span>0</span></li>
-        <button class="menu-button">Menu</button>  
+        <ul style="padding-left: 0px;">
+            <li class="hud__score">Score: <span>0</span></li>
+            <li class="hud__score highscore"><br>Highscore: <span>0</span></li>
+        </ul>
         
+        <button class="menu-button">Menu</button>  
         <div class="popup visible">
             <div class="menu">Return</div>
             <div class="menu">Quit</div>
