--- a/public/game1.html
+++ b/public/game1.html
@@ -30,9 +30,13 @@
         
         <button class="menu-button">Menu</button>  
         <div class="popup visible">
-            <div class="menu">Return</div>
+            <!-- <div class="menu">Return</div>
             <div class="menu">Quit</div>
-            <div class="menu">Logout</div>
+            <div class="menu">Logout</div> -->
+
+            <button class="menu options">RETURN</button>
+            <button class="menu options">QUIT</button>
+            <button class="menu options">Logout</button>
         </div>      
 
     </ul>
